@@ -1,3 +1,9 @@
+2007-06-19  Marcus D. Hanwell <marcus@cryos.org>
+
+	* libavogadro/src/glwidget.cpp, libavogadro/src/engines/*.cpp:
+	Initialise the painter at the start of the GLWidget render function,
+	removed all calls to painter begin and end from the engines.
+
 2007-06-19  Donald E. Curtis <dcurtis3@sourceforge.net>
 
 	* avogadro/src/extensions/ghemicalextension.cpp: Added threading so that a
